--- a/assignment1/MLP301x_asm1_anphFX23501@funix.edu.vn/An_PhamHoang_grade_the_exams.ipynb
+++ b/assignment1/MLP301x_asm1_anphFX23501@funix.edu.vn/An_PhamHoang_grade_the_exams.ipynb
@@ -261,8 +261,8 @@
         "\n",
         "# check median\n",
         "position = (len(sort_list_mark) // 2)\n",
-        "if ((len(sort_list_mark) % 2) == 1): median = sort_list_mark[position + 1]\n",
-        "else: median = ( sort_list_mark[position] + sort_list_mark[position + 1] ) / 2\n",
+        "if ((len(sort_list_mark) % 2) == 1): median = sort_list_mark[position]\n",
+        "else: median = ( sort_list_mark[position] + sort_list_mark[position - 1] ) / 2\n",
         "\n",
         "print(\"Mean is: \", mean)\n",
         "print(\"Highest_score is: \", highest_score)\n",
